--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RS3 Hub</title>
+
+    <title>RS3 Efficiency Hub — Skill Calculators, Training Guides & Quest Tracker</title>
+    <meta name="description" content="RS3 Efficiency Hub is a free community tool for RuneScape 3 players. Skill calculators, P2P and Ironman training guides for all 25 skills, quest tracker with requirement checking, and daily task tracking." />
+    <meta name="keywords" content="RuneScape 3, RS3, skill calculator, training guide, quest tracker, ironman, P2P, OSRS, efficiency" />
+    <meta name="author" content="RS3 Efficiency Hub" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://rs3-efficiency-hub.onrender.com/" />
+    <meta property="og:title" content="RS3 Efficiency Hub — Calculators, Guides & Quest Tracker" />
+    <meta property="og:description" content="Free community tool for RS3 players. 24 skill calculators, 25 training guides (P2P + Ironman), 270 quest tracker, and daily task management." />
+    <meta property="og:site_name" content="RS3 Efficiency Hub" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="RS3 Efficiency Hub" />
+    <meta name="twitter:description" content="Free RS3 tool — skill calculators, training guides, and quest tracking for every type of player." />
   </head>
   <body>
     <div id="root"></div>
