Tweaks to archaeology calculator and fixed routing issues

--- a/client/index.html
+++ b/client/index.html
@@ -5,21 +5,21 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>RS3 Efficiency Hub — Skill Calculators, Training Guides & Quest Tracker</title>
-    <meta name="description" content="RS3 Efficiency Hub is a free community tool for RuneScape 3 players. Skill calculators, P2P and Ironman training guides for all 25 skills, quest tracker with requirement checking, and daily task tracking." />
+    <title>RuneHub — Skill Calculators, Training Guides & Quest Tracker</title>
+    <meta name="description" content="RuneHub is a free community tool for RuneScape 3 players. Skill calculators, P2P and Ironman training guides for all 25 skills, quest tracker with requirement checking, and daily task tracking." />
     <meta name="keywords" content="RuneScape 3, RS3, skill calculator, training guide, quest tracker, ironman, P2P, OSRS, efficiency" />
-    <meta name="author" content="RS3 Efficiency Hub" />
+    <meta name="author" content="RuneHub" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://rs3-efficiency-hub.onrender.com/" />
-    <meta property="og:title" content="RS3 Efficiency Hub — Calculators, Guides & Quest Tracker" />
+    <meta property="og:title" content="RuneHub — Calculators, Guides & Quest Tracker" />
     <meta property="og:description" content="Free community tool for RS3 players. 24 skill calculators, 25 training guides (P2P + Ironman), 270 quest tracker, and daily task management." />
-    <meta property="og:site_name" content="RS3 Efficiency Hub" />
+    <meta property="og:site_name" content="RuneHub" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="RS3 Efficiency Hub" />
+    <meta name="twitter:title" content="RuneHub" />
     <meta name="twitter:description" content="Free RS3 tool — skill calculators, training guides, and quest tracking for every type of player." />
   </head>
   <body>
